# review-processor-project

./: README.MD  blueprint.json
review-processor-backend/: .dockerignore  Cargo.toml  Dockerfile
review-processor-backend/src/: main.rs
review-processor-backend/src/database/: pool.rs
review-processor-backend/src/handlers/: idm_handler.rs  mod.rs  review_handler.rs
review-processor-backend/src/middlewares/: auth_middleware.rs
review-processor-backend/src/models/: errors.rs  mod.rs  response.rs  review_models.rs
review-processor-backend/src/repositories/: mod.rs  review_repository.rs
review-processor-backend/src/routes/: idm_routes.rs  mod.rs  review_routes.rs
review-processor-backend/src/services/: mod.rs  review_service.rs
review-processor-backend/src/utils/: jwt.rs
review-processor-frontend/: .dockerignore  Dockerfile  README.md  eslint.config.js  nginx.conf  package-lock.json  package.json  quasar.config.ts
review-processor-frontend/src/: App.vue
review-processor-frontend/src/boot/: axios.ts  google.ts  sentry.ts  tinyMCE.ts
review-processor-frontend/src/pages/: FormPage.vue  LoginPage.vue
review-processor-frontend/src/router/: index.ts  routes.ts
review-processor-frontend/src/utils/: validate.ts
