[package]
name = "review-processor-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-cors = "0.7.0"
actix-web = "4.9.0"
dotenv = "0.15.0"
env_logger = "0.11.6"
serde = { version = "1.0.218", features = ["derive"] }
sqlx = { version = "0.8.3", features = ["runtime-tokio-native-tls", "postgres"] }
async-trait = "0.1.87"
log = "0.4.26"
thiserror = "2.0.12"
google-oauth = "1.11.3"
mockall = "0.13.1"
tokio = { version = "1.44.1", features = ["full"] }
sentry = "0.36.0"
sentry-actix = "0.36.0"
sentry-log = "0.36.0"